package com.lft.composite.entity;

public class DependentObject1 {
	
	private String data;
	
	public String getData() {
		return data;
	}
	
	public void setData(String data) {
		this.data = data;
	}
}