package com.lft.composite.entity;

public class DependentObject2 {
	
	private String data;
	
	public void setData(String data) {
		this.data = data;
	}
	
	public String getData() {
		return data;
	}
}